--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     #svg-container {
     width: 100%;
-    height: 80vh;
+    height: 100%;
     border-top: 2px solid black;
     display: flex;
     justify-content: center;
