--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <style>
     body {
-      overflow: hidden;
       margin: 0;
       padding: 0;
      
@@ -19,7 +18,7 @@
 
     #tree {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       margin: 0;
       padding: 0;
     }
