--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <style>
     body {
+      overflow: hidden;
       margin: 0;
       padding: 0;
      
